--- a/contacts.css
+++ b/contacts.css
@@ -29,33 +29,120 @@ h1 {
     font-weight: 700;
     font-family: "Roboto Slab";
 }
+
 .main-contacts div {
-width: 30%;
+    width: 30%;
 }
+
 .wrapper .main-contacts {
-    
+
     flex-wrap: wrap;
     justify-content: space-between;
 
 }
 
 .wrapper .main-contacts a {
-    
+
     font-size: 18px;
     line-height: 24px;
     color: #25252c;
     font-weight: bold;
     font-family: "Arial";
 }
-.office a:hover{
+
+.office a:hover {
     color: #fd8300;
 }
-.office a{
+
+.office a {
     transition: 0.5s;
 }
-.consult a:hover{
+
+.consult a:hover {
     color: #fd8300;
 }
-.consult a{
+
+.consult a {
     transition: 0.5s;
+}
+
+/* google maps */
+.google-maps {
+    width: 500px;
+    overflow: hidden;
+    margin-top: 34px;
+
+
+}
+
+.google-maps iframe {
+
+    margin-top: -70px;
+    width: 100%;
+    min-height: 400px;
+    border: none;
+}
+
+/* form */
+.form-name-main {
+    max-width: 467px;
+    
+}
+
+form input {
+
+    padding: 10px;
+}
+
+.tel-name {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 9px;
+}
+
+.tel-name label {
+    width: 49%;
+}
+
+.tel-name input {
+    display: block;
+    width: 100%;
+}
+
+.theme-text {
+    margin-bottom: 9px;
+}
+
+form .theme-text input {
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+    resize: vertical;
+    min-width: 200px;
+    max-height: 250px;
+    margin-bottom: 9px;
+}
+.every {
+    display: flex;
+    justify-content: space-between;
+    gap: 27px;
+}
+.submit-form button {
+    
+    border-radius: 21px;
+    background-color: #fd8300;
+    border: none;
+    padding: 15px 20px;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: "Arial";
+    text-align: center;
+}
+.submit-checkbox {
+    display: flex;
+    gap: 25px;
+    align-items: center;
 }
