--- a/price.css
+++ b/price.css
@@ -25,9 +25,9 @@ table {
 }
 
 
-table thead tr td {
+table thead tr {
 
-    padding: 13px;
+
     border: none;
     border-radius: 3px;
     background-color: #1f1f56;
@@ -36,4 +36,29 @@ table thead tr td {
     color: #ffffff;
     font-weight: 700;
     font-family: "Roboto Slab";
+}
+
+table thead tr td {
+    padding: 13px;
+}
+
+table tbody tr {
+    box-shadow: inset 0px -1px 0px #cecedd;
+    background-color: #e4e4ec;
+}
+
+table tbody tr td {
+    padding: 10px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #666666;
+}
+
+table tbody tr:hover {
+    background-color: #fd8300;
+
+}
+
+table tbody tr:hover td {
+    color: #fff;
 }
