--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ h1 {
 }
 
 main .wrapper>div {
-    width: 75%;
+    width: 100%;
 }
 
 main {
@@ -591,7 +591,7 @@ figure {
         align-items: center;
     }
     .header-menu  .social {
-        text-align: right;
+        text-align: center;
         flex-direction: row;
     }
 
@@ -621,7 +621,7 @@ figure {
         text-align: center;
     }
 main .wrapper{
-    text-align: right;
+    text-align: center;
     display: flex;
     flex-direction: column;
 }
@@ -645,15 +645,20 @@ main .wrapper{
     .popular-project .project figure h2 {
         font-size: 16px;
     }
+    .main-main {
+        width: 100%;
+    }
 }
 
 
 @media screen and (min-width: 768px) {
-    .header-menu .flex, .company .flex, .footer .flex {
+
+     .company .flex, .footer .flex {
         
         flex-direction: column;
         align-items: center;
     }
+    
     .wrapper {
         width: 100%;
     
@@ -665,6 +670,10 @@ main .wrapper{
         text-align: center;
         display: flex;
         flex-direction: row;
+      }
+      .project {
+        display: flex;
+        justify-content: space-around;
       }
       
     }
