--- a/price.css
+++ b/price.css
@@ -84,6 +84,44 @@ table tbody tr:hover td {
     text-decoration: none;
 }
 @media (min-width: 320px) {
+    .header-menu .wrapper {
+        position: relative;
+        padding: 0px 10px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .burger-menu {
+        position: absolute;
+        top: 8px;
+        left: 20px;
+        width: 25px;
+        height: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .burger-menu span {
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        transition: 0.3s;
+    }
+
+    .burger-menu.active-burger span:first-child {
+        position: absolute;
+        top: 50%;
+        transform: rotate(45deg);
+    }
+    .burger-menu.active-burger span:nth-child(2) {
+        opacity: 0;
+    }
+    .burger-menu.active-burger span:last-child {
+        position: absolute;
+        top: 50%;
+        transform: rotate(-45deg);
+    }
     .table {
         overflow: auto;
     }
