--- a/style.css
+++ b/style.css
@@ -553,64 +553,57 @@ figure {
 
     margin: 0;
 }
-@media (max-width: 768px) {
-    .header-menu .flex, .company .flex, .footer .flex {
-        flex-direction: column;
-        align-items: center;
-    }
 
-    .contacts a, .email a {
-        display: block;
-        margin: 5px 0;
-    }
-
-    .header-menu ul, .footer-info1 ul, .footer-info2 ul {
-        text-align: center;
-    }
-
-    .header-menu ul li, .footer-info1 ul li, .footer-info2 ul li {
-        margin: 5px 0;
-    }
-
-    .popular-project .project {
-        flex-direction: column;
-    }
-
-    .popular-project .project figure {
-        margin-bottom: 20px;
-    }
-
-    aside nav ul {
-        padding-left: 20px;
-    }
-}
 
 @media (min-width: 320px) {
     .header-menu  {
         text-align: left;
     }
     .header-menu .wrapper {
+        position: relative;
         padding: 0px 10px;
         display: flex;
-        justify-content: space-between;
-         flex-direction: row;
+        justify-content: center;
     }
+
     .burger-menu {
-        
+        position: absolute;
+        top: 8px;
+        left: 20px;
         width: 25px;
         height: 20px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
-    
+
     .burger-menu span {
         width: 100%;
         height: 2px;
         background-color: #fff;
+        transition: 0.3s;
     }
+
+    .burger-menu.active-burger span:first-child {
+        position: absolute;
+        top: 50%;
+        transform: rotate(45deg);
+    }
+    .burger-menu.active-burger span:nth-child(2) {
+        opacity: 0;
+    }
+    .burger-menu.active-burger span:last-child {
+        position: absolute;
+        top: 50%;
+        transform: rotate(-45deg);
+    }
+
     .menu {
         display: none;
+    }
+
+    .menu.active-menu {
+        display: block;
     }
     
 
@@ -676,6 +669,35 @@ main .wrapper{
 
 
 @media screen and (min-width: 768px) {
+    .header-menu .flex, .company .flex, .footer .flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contacts a, .email a {
+        display: block;
+        margin: 5px 0;
+    }
+
+    .header-menu ul, .footer-info1 ul, .footer-info2 ul {
+        text-align: center;
+    }
+
+    .header-menu ul li, .footer-info1 ul li, .footer-info2 ul li {
+        margin: 5px 0;
+    }
+
+    .popular-project .project {
+        flex-direction: column;
+    }
+
+    .popular-project .project figure {
+        margin-bottom: 20px;
+    }
+
+    aside nav ul {
+        padding-left: 20px;
+    }
     .menu {
         display: block;
     }
@@ -707,6 +729,9 @@ main .wrapper{
       
     }
     @media screen and (min-width: 1024px) {
+        .header-menu .wrapper {
+            justify-content: space-between;
+        }
         main .wrapper {
             display: flex;
             justify-content: space-between;
