--- a/style.css
+++ b/style.css
@@ -823,7 +823,9 @@ figure {
     .company .wrapper.flex>div {
         width: fit-content;
     }
-
+.company .wrapper.flex .email.flex {
+text-align: left;
+}
     aside {
         text-align: left;
         min-width: 220px;
