--- a/style.css
+++ b/style.css
@@ -694,6 +694,7 @@ figure {
 
     .popular-project .project figure h2 {
         font-size: 16px;
+        color: #1f1f56;
     }
 
     .main-main {
